# Bitcrafte-Engine

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
cmake/: RHI.cmake  (+7 more)
documentation/: CMakeLists.txt
documentation/doxygen/: bitcrafte.Doxyfile.in
projects/: CMakeLists.txt
projects/editor/: CMakeLists.txt
projects/editor/-template-/: CMakeLists.txt
projects/editor/-template-/private/-template-/: PreCompiledHeader.hpp
projects/editor/editor/: CMakeLists.txt
projects/editor/editor/private/editor/: EditorComponent.cpp  PreCompiledHeader.hpp
projects/editor/editor/private/editor/entrypoint/: Main.cpp
projects/editor/editor/public/editor/: EditorComponent.hpp
projects/editor/editor/public/editor/entrypoint/: Main.hpp
projects/engine/: CMakeLists.txt
projects/engine/-template-/: CMakeLists.txt
projects/engine/-template-/private/-template-/: -template-Component.cpp  PreCompiledHeader.hpp
projects/engine/-template-/public/-template-/: -template-Component.hpp
projects/engine/build_configuration/: CMakeLists.txt
projects/engine/build_configuration/private/build_configuration/: BuildConfigurationComponent.cpp
projects/engine/build_configuration/public/build_configuration/: BuildConfigurationComponent.hpp  BuildOptions.hpp
projects/engine/build_configuration/public/build_configuration/api/: EngineAPI.hpp
projects/engine/build_configuration/public/build_configuration/platform/: Platform.hpp
projects/engine/core/: CMakeLists.txt
projects/engine/core/private/core/: CoreComponent.cpp  PreCompiledHeader.hpp
projects/engine/core/private/core/thread/: TaskPriority.cpp  TaskState.cpp  ThreadPool.cpp  ThreadSharedData.cpp
projects/engine/core/public/core/: CoreComponent.hpp  CoreComponentCreateInfo.hpp
projects/engine/core/public/core/application/: ApplicationInfo.hpp
projects/engine/core/public/core/containers/: Array.hpp  Function.hpp  List.hpp  Map.hpp  Optional.hpp  Pair.hpp  Path.hpp  Text.hpp  UniquePtr.hpp
projects/engine/core/public/core/data_types/: FundamentalTypes.hpp
projects/engine/core/public/core/event/: Event.hpp
projects/engine/core/public/core/math/: AABB.hpp  FundamentalComparison.hpp  MathConstants.hpp  Matrix.hpp  Rounding.hpp  SmallValues.hpp  Trigonometry.hpp  Vector.hpp  VectorComparison.hpp  VectorMath.hpp
projects/engine/core/public/core/memory/: HeapMemoryBlock.hpp  MemoryBlockInfo.hpp  MemoryRange.hpp
projects/engine/core/public/core/message_bus/: MessageBus.hpp  MessageBusMessage.hpp  MessageBusMessageHandler.hpp  MessageBusPacket.hpp  MessageBusReceiver.hpp
projects/engine/core/public/core/thread/: GuardedValue.hpp  Task.hpp  TaskPriority.hpp  TaskState.hpp  Thread.hpp  ThreadDescription.hpp  ThreadPool.hpp  ThreadPoolCreateInfo.hpp  ThreadSharedData.hpp
projects/engine/core/public/core/timer/: BasicTimer.hpp
projects/engine/core/public/core/utility/: ValueConcepts.hpp
projects/engine/engine/: CMakeLists.txt
projects/engine/engine/private/engine/: EngineComponent.cpp  PreCompiledHeader.hpp
projects/engine/engine/public/engine/: EngineComponent.hpp  EngineComponentCreateInfo.hpp  EngineComponentStartInfo.hpp
projects/engine/rhi/: CMakeLists.txt
projects/engine/rhi/rhi/: CMakeLists.txt
projects/engine/rhi/rhi/private/rhi/: RHIComponent.cpp
projects/engine/rhi/rhi/public/rhi/: RHIComponent.hpp  RHIComponentCreateInfo.hpp  RHIComponentStartInfo.hpp
projects/engine/rhi/rhi_vulkan/: CMakeLists.txt
projects/engine/rhi/rhi_vulkan/private/rhi_vulkan/: PreCompiledHeader.hpp  RHIVulkanComponent.cpp
projects/engine/rhi/rhi_vulkan/public/rhi_vulkan/: RHIVulkanComponent.hpp
projects/engine/scene/: CMakeLists.txt
projects/engine/scene/private/scene/: SceneComponent.cpp
projects/engine/scene/private/scene/entity/: Entity.cpp
projects/engine/scene/private/scene/mesh/: LODMesh.cpp  Mesh.cpp  MeshData.cpp  MeshStorage.cpp  Meshlet.cpp  Vertex.cpp
projects/engine/scene/private/scene/mesh_manager/: MeshManager.cpp
projects/engine/scene/private/scene/scene/: Scene.cpp  SceneTree.cpp
projects/engine/scene/private/scene/scene_data_manager/: SceneDataManager.cpp
projects/engine/scene/private/scene/scene_manager/: SceneManager.cpp
projects/engine/scene/private/scene/scene_tree/: SceneTree.cpp
projects/engine/scene/private/scene/world/: World.cpp
projects/engine/scene/public/scene/: SceneComponent.hpp
projects/engine/scene/public/scene/entity/: Entity.hpp
projects/engine/scene/public/scene/mesh/: LODMesh.hpp  Mesh.hpp  MeshData.hpp  MeshStorage.hpp  Meshlet.hpp  Vertex.hpp
projects/engine/scene/public/scene/mesh_manager/: MeshManager.hpp
projects/engine/ui/: CMakeLists.txt
projects/engine/ui/private/ui/: UIComponent.cpp
projects/engine/ui/public/ui/: UIComponent.hpp
projects/engine/window/: CMakeLists.txt
projects/engine/window/private/window/: WindowComponent.cpp
projects/engine/window/public/window/: WindowComponent.hpp  WindowComponentCreateInfo.hpp
projects/engine/window_manager/: CMakeLists.txt
projects/engine/window_manager/window_manager/: CMakeLists.txt
projects/engine/window_manager/window_manager_wayland/: CMakeLists.txt
projects/engine/window_manager/window_manager_wayland/generated_wayland_protocols/: CMakeLists.txt  License.md  Readme.md  xdg-shell-protocol.c
projects/engine/window_manager/window_manager_win32/: CMakeLists.txt
projects/engine/window_manager/window_manager_xcb/: CMakeLists.txt
projects/engine/window_manager/window_manager_xlib/: CMakeLists.txt
projects/engine/world/: CMakeLists.txt
projects/engine/world/private/world/: WorldComponent.cpp
projects/engine/world/public/world/: WorldComponent.hpp
submodules/: CMakeLists.txt
tests/: CMakeLists.txt
tests/engine/: CMakeLists.txt
tests/engine/core/: CMakeLists.txt
tests/engine/core/source/: Event.cpp
tests/engine/core/source/containers/: Array.cpp  Function.cpp  List.cpp  Map.cpp  Optional.cpp  Path.cpp  Text.cpp  UniquePtr.cpp
tests/engine/core/source/message_bus/: MessageBus.cpp
tests/engine/core/source/thread/: ThreadPool.cpp
(+266 files in other folders)
